[package]
name = "zwiesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
rand = "0.8.5"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["net", "macros"] }
tokio-util = { version = "0.7.8", features = ["codec"] }

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt"] }
